# GeometricWars

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json
src/: Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  Vec2.cpp  Vec2.h  main.cpp
src/config/: config.txt
